--- a/app/index.html
+++ b/app/index.html
@@ -26,7 +26,7 @@
         </nav>
     </header>  
     
-        <div class="svgtek-banner">
+        <div class="banner">
             <h1></h1>
 
         </div>
