Just adjusted some lg-hero padding.

--- a/app/index.html
+++ b/app/index.html
@@ -38,7 +38,7 @@
                 
                     <h1 class="large-hero__title">MTL Web Development </h1>
                     <p class="large-hero__description">
-                     learn web development to build apps and websites for clients with content </p> 
+                     learning web development to build apps and websites for clients with content </p> 
                   
                    <!--
                         <a href="#" class="btn btn--fuschia btn--large">cta link</a>
