reduced our-benning image size.

--- a/app/index.html
+++ b/app/index.html
@@ -36,7 +36,7 @@
             <div class="large-hero__text-content">
                 <div class="wrapper">
                 
-                    <h1 class="large-hero__title">MTL Web Development </h1>
+                    <h1 class="large-hero__title">Web Development </h1>
                     <p class="large-hero__description">
                      learning web development to build apps and websites for clients with content </p> 
                   
@@ -84,7 +84,7 @@
 
                     <div class="feature-item">
                         <img  src="assets/images/icons/wifi.svg">
-                        <h3>Go Live</h3>
+                        <h3>So Live</h3>
                     </div>
 
                     <div class="feature-item">
